# dont-click-that-test

./: .env.example  .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.js
.cursor/rules/: dont-click-that-rule.mdc
programs/dont-click-that/: Anchor.toml  Cargo.toml
programs/dont-click-that/src/: lib.rs
server/: index.js
src/: App.jsx  index.css
src/components/: ChatPanel.jsx  GameGrid.jsx  GameStats.jsx  Layout.jsx  PlayerAvatar.jsx
src/contexts/: GameContext.jsx  WalletContext.jsx
src/pages/: Game.jsx  Home.jsx  Leaderboard.jsx  Profile.jsx
src/utils/: game.js  solana.js
